--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,20 @@
 <!doctype html>
 <html lang="en" class="group/html">
-    <head>
-        <meta charset="utf-8" />
-        <link href="%sveltekit.assets%/images/favicon-light.ico" media="(prefers-color-scheme: light)" rel="icon" />
-        <link href="%sveltekit.assets%/images/favicon-dark.ico" media="(prefers-color-scheme: dark)" rel="icon" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        %sveltekit.head%
-    </head>
+	<head>
+		<meta charset="utf-8" />
+		<link
+			href="%sveltekit.assets%/images/favicon-light.ico"
+			media="(prefers-color-scheme: light)"
+			rel="icon"
+		/>
+		<link
+			href="%sveltekit.assets%/images/favicon-dark.ico"
+			media="(prefers-color-scheme: dark)"
+			rel="icon"
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		%sveltekit.head%
+	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
