--- a/src/app.html
+++ b/src/app.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<link
-			href="%sveltekit.assets%/images/favicon-light.ico"
+			href="%sveltekit.assets%/images/favicon-light.png"
 			media="(prefers-color-scheme: light)"
 			rel="icon"
 		/>
 		<link
-			href="%sveltekit.assets%/images/favicon-dark.ico"
+			href="%sveltekit.assets%/images/favicon-dark.png"
 			media="(prefers-color-scheme: dark)"
 			rel="icon"
 		/>
